# interface-aws-integration

./: .gitignore  README.md  interface.yaml  make_docs  provides.py  pydocmd.yml  requires.py  tox.ini
.github/workflows/: main.yml
docs/: provides.md  requires.md
ops/: pyproject.toml  tox.ini
ops/ops/interface_aws/: requires.py
ops/tests/data/: aws_recv.yaml  aws_sent.yaml
ops/tests/unit/: test_ops_requires.py
