[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ops.interface_aws"
version = "0.1.0"
authors = [
  {name="Canonical Kubernetes", email="k8s-crew@lists.canonical.com"},
]
description = "Charm library for installing and configuring aws integration"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "ops",
  "packaging",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/charmed-kubernetes/interace-aws-integration"
"Bug Tracker" = "https://github.com/charmed-kubernetes/interace-aws-integration/issues"

[tool.setuptools.packages.find]
include = ["ops.*"]
